# FRS_Mercado

./: .gitignore  CHANGELOG.md  Contrato_FRS_Atual.md  Contrato_Frs_Solucions.rtf  EULA.template.txt  EULA.txt  FRS_Mercado.spec  RELATORIO_AUDITORIA_SEGURANCA_2026-07-16.md  _runtime_hook_error_logger.py  app_config.py  app_paths.py  auto_update.py  build_exe.py  build_flet_windows_bundle.py  calculadora_tributaria.py  checklist_homologacao.md  checklist_operacional.py  client_credentials_store.py  contrato_template.md  database.py  database_manager.py  deploy.py  docs_auto_update_releases.md  docs_client_credentials.md  error_notifier.py  firebase_manager.py  gerador_licenca.py  ia_gestao.py  license_manager.py  main.py  market_identity.py  modulo_cliente.py  modulo_config.py  modulo_estoque.py  modulo_financeiro.py  modulo_fiscal.py  modulo_fornecedor.py  modulo_login.py  modulo_main.py  modulo_orcamento.py  (+22 more)
_build_support/: checklist_homologacao.md  version_info.txt
android_apk/: .env.example  README_BUILD_APK.md  settings.gradle
android_apk/app/: build.gradle  proguard-rules.pro
android_apk/app/src/main/: AndroidManifest.xml
android_apk/app/src/main/java/com/oficinapesca/mobile/: MainActivity.kt
android_apk/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile_app/: client_credentials_store.py  firebase_config.py  main.py  pyproject.toml
release_final/: version.json
